Kubernetes/AgrOne/AgrOne-Test/AgroGeo/agrogeo-test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agrogeo-test
  namespace: agrotech-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agrogeo-test
  template:
    metadata:
      labels:
        app: agrogeo-test
    spec:
      containers:
      - name: agrogeo-test
        image: docker.osgeo.org/geoserver:2.24.2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: agrogeo-test-pvc
          mountPath: /opt/geoserver_data/WEB-INF/lib # Adjust the mount path as needed
      volumes:
      - name: agrogeo-test-pvc
        persistentVolumeClaim:
          claimName: agrogeo-test-pvc
