Kubernetes/AgrOne/AgrOne-Test/AgroGeo/agrogeo-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agrogeo-test-service
  namespace: agrotech-test
spec:
  selector:
    app: agrogeo-test
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
