Kubernetes/AgrOne/AgrOne-Test/AgroGeo/agrogeo-test-ingress.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /geoserver/
    nginx.ingress.kubernetes.io/app-root: /geoserver/
    nginx.org/client-max-body-size: "1024m"
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
  name: agrogeo-test-ingres
  namespace: agrotech-test
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 'agrogeo-test.prodata.local'
      secretName: tls-secret-prodata-local
  rules:
  - host: agrogeo-test.prodata.local
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: agrogeo-test-service
            port:
              number: 8080
